Docker: re-apply inadvertently remove add-opens flags