@@ -27,5 +27,8 @@ umask 0002 && java -Xmx1024M \
    -Dorg.micromanager.corelog.dir=/tmp \
    -Dplugins.dir="$IMAGEJ_DIR" \
    $MM_UI_SCALE_OPT \
+   --add-opens=java.desktop/java.awt=ALL-UNNAMED \
+   --add-opens=java.desktop/java.awt.color=ALL-UNNAMED \
+   --add-opens=java.desktop/sun.awt=ALL-UNNAMED \
    -jar "$IMAGEJ_DIR/ij.jar" \
    -eval 'run("Micro-Manager Studio");' \
